examples/policy/kyverno/.chainsaw-tests/bad-rolebinding-sa-group-ns.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: test-forbidden-binding-sa-group-ns
  namespace: sandbox-ns
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: view
subjects:
- kind: Group
  name: system:serviceaccounts:sandbox-ns
