examples/policy/kyverno/.chainsaw-tests/bad-rolebinding-sa-user.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: test-forbidden-binding-sa-user
  namespace: sandbox-ns
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: view
subjects:
- kind: User
  name: system:serviceaccount:sandbox-ns:sandbox-sa
  apiGroup: rbac.authorization.k8s.io
