examples/policy/kyverno/.chainsaw-tests/setup-other-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: another-sa
  namespace: test-ns
