examples/policy/kyverno/.chainsaw-tests/setup-rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:rbac
  labels:
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
rules:
- apiGroups:
  - rbac.authorization.k8s.io
  resources:
  - clusterrolebindings
  - rolebindings
  verbs:
  - get
  - list
  - watch
